Bug 1482002 - add nsCaseInsensitiveStringComparator default constructor r=bz